@@ -84,6 +84,10 @@ pcre2test.
 14. The alternative matching function, pcre2_dfa_match() misbehaved if it 
 encountered a character class with a possessive repeat, for example [a-f]{3}+.
 
+15. The depth (formerly recursion) limit now applies to DFA matching (as 
+of 10.23/36); pcre2test has been upgraded so that \=find_limits works with DFA 
+matching to find the minimum value for this limit.
+
 
 Version 10.23 14-February-2017
 ------------------------------
